--- a/firstwebsite.html
+++ b/firstwebsite.html
@@ -10,7 +10,7 @@
       <p>I am an international student from Caracas, Venezuela</p>
       <p>I have a bearded dragon named Carlos</p>
       <p>My IP address is 192.168.1.159</p>
-      <img src="https://images.unsplash.com/photo-1571192776145-9f563c1df686?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80" alt="garden">
+      <img src="https://images.unsplash.com/photo-1571192776145-9f563c1df686?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80" alt="garden"/>
 
    </body>
 
