--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <html>
 
    <head>
-      <h1>My Cool Website!!</h1>
+      <h1>My Cool Website</h1>
    </head>
 
    <body>
@@ -9,8 +9,8 @@
       <p>I am a Human Factors Engineering major</p>
       <p>I am an international student from Caracas, Venezuela</p>
       <p>I have a bearded dragon named Carlos</p>
-      <p>My IP address is 192.168.1.159</p>
-      <img src="https://images.unsplash.com/photo-1571192776145-9f563c1df686?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80" alt="garden">
+	  <p>My IP address is 192.168.1.159</p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/All_Gizah_Pyramids.jpg" alt="pyramids">
 
    </body>
 
