--- a/demo.html
+++ b/demo.html
@@ -9,8 +9,8 @@
       <p>I am a Human Factors Engineering major</p>
       <p>I am an international student from Caracas, Venezuela</p>
       <p>I have a bearded dragon named Carlos</p>
-	  <p>My IP address is 192.168.1.159</p>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/All_Gizah_Pyramids.jpg" alt="pyramids">
+      <p>My IP address is 192.168.1.159</p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/All_Gizah_Pyramids.jpg" alt="pyramids" style="width:104px;height:142px;">
 
    </body>
 
